generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

enum RoleName {
  ADMIN
  MANAGER
  EMPLOYEE
}

enum DocumentVisibility {
  ALL
  DEPARTMENT
  PRIVATE
}

enum DocumentProcessingStatus {
  PENDING
  PROCESSING
  READY
  FAILED
}

enum DepartmentAccessLevel {
  MEMBER
  MANAGER
  VIEWER
}

model UserDepartmentAccess {
  id           String                @id @default(uuid())
  userId       String
  user         User                  @relation(fields: [userId], references: [id], onDelete: Cascade)
  departmentId String
  department   Department            @relation(fields: [departmentId], references: [id], onDelete: Cascade)
  accessLevel  DepartmentAccessLevel
  createdAt    DateTime              @default(now())

  @@unique([userId, departmentId])
  @@index([userId])
  @@index([departmentId])
}

enum NotificationType {
  DOCUMENT_CREATED
  DOCUMENT_DELETED
  DOCUMENT_UPDATED
  MANAGER_ASSIGNED
  MANAGER_REMOVED
  MEMBER_ADDED
  MANUAL
}

enum NotificationTarget {
  ALL_USERS
  DEPARTMENT
  ROLE
}

model Notification {
  id                 String              @id @default(uuid())
  type               NotificationType
  title              String
  body               String?             @db.Text
  actorId            String?
  actor              User?               @relation("NotificationActor", fields: [actorId], references: [id], onDelete: SetNull)
  documentId         String?
  document           Document?           @relation(fields: [documentId], references: [id], onDelete: SetNull)
  departmentId       String?
  department         Department?         @relation(fields: [departmentId], references: [id], onDelete: SetNull)
  targetType         NotificationTarget?
  targetDepartmentId String?
  targetRoleName     String?
  attachmentKey      String?
  attachmentName     String?
  attachmentMimeType String?
  attachmentSize     Int?
  createdAt          DateTime            @default(now())

  recipients         UserNotification[]

  @@index([departmentId, createdAt])
  @@index([createdAt])
  @@index([actorId])
}

model UserNotification {
  id             String       @id @default(uuid())
  userId         String
  user           User         @relation(fields: [userId], references: [id], onDelete: Cascade)
  notificationId String
  notification   Notification @relation(fields: [notificationId], references: [id], onDelete: Cascade)
  read           Boolean      @default(false)
  readAt         DateTime?
  createdAt      DateTime     @default(now())

  @@unique([userId, notificationId])
  @@index([userId, read, createdAt])
  @@index([userId, createdAt])
}

enum DocumentAuditAction {
  CREATED
  VERSION_UPLOADED
  UPDATED
  DELETED
  FAVORITED
  UNFAVORITED
  ARCHIVED
  UNARCHIVED
  VIEWED
  REPROCESS_REQUESTED
  BULK_DELETED
}

model Department {
  id                 String   @id @default(uuid())
  name               String   @unique
  parentDepartmentId String?
  parent             Department?  @relation("DepartmentHierarchy", fields: [parentDepartmentId], references: [id], onDelete: SetNull)
  children           Department[] @relation("DepartmentHierarchy")
  createdAt          DateTime @default(now())
  updatedAt          DateTime @updatedAt

  users              User[]
  documents          Document[]
  userAccess         UserDepartmentAccess[]
  notifications      Notification[]
}

model Role {
  id          String   @id @default(uuid())
  name        RoleName @unique
  description String?
  users       User[]
}

model User {
  id                  String   @id @default(uuid())
  employeeBadgeNumber String?  @unique
  name                String
  email               String   @unique
  passwordHash        String
  phoneNumber         String?
  position            String?
  profilePictureUrl   String?
  roleId              String
  role                Role     @relation(fields: [roleId], references: [id], onDelete: Restrict)
  departmentId        String
  department          Department @relation(fields: [departmentId], references: [id], onDelete: Restrict)
  isActive                 Boolean  @default(true)
  loginAllowed             Boolean  @default(true)
  accessDocumentsAllowed   Boolean  @default(true)
  manageDocumentsAllowed   Boolean  @default(true)
  accessDashboardAllowed   Boolean  @default(true)
  useAiQueriesAllowed      Boolean  @default(true)
  authVersion              Int      @default(0)
  failedLoginAttempts Int      @default(0)
  loginLockedUntil    DateTime?
  lastLoginAt         DateTime?
  mustChangePassword  Boolean  @default(false)
  deletedAt           DateTime?
  createdAt           DateTime @default(now())
  updatedAt           DateTime @updatedAt

  documentsCreated        Document[]             @relation("DocumentCreatedBy")
  documentVersionsCreated DocumentVersion[]      @relation("DocumentVersionCreatedBy")
  documentFavorites       DocumentUserFavorite[]
  documentRecents         DocumentUserRecent[]
  documentAuditLogs       DocumentAuditLog[]
  passwordResetTokens     PasswordResetToken[]
  refreshSessions         RefreshSession[]
  authEvents              AuthEvent[]
  conversations           Conversation[]
  answerFeedbacks         AnswerFeedback[]
  departmentAccess        UserDepartmentAccess[]
  notificationsActed      Notification[]         @relation("NotificationActor")
  notifications           UserNotification[]

  @@index([email])
  @@index([departmentId])
  @@index([deletedAt])
}

enum AuthEventType {
  LOGIN_SUCCESS
  LOGIN_FAILURE
  LOGIN_LOCKED
  REFRESH_SUCCESS
  REFRESH_FAILURE
  LOGOUT
  LOGOUT_ALL
  PASSWORD_CHANGE
  PASSWORD_RESET_REQUESTED
  PASSWORD_RESET_COMPLETED
}

model PasswordResetToken {
  id        String   @id @default(uuid())
  userId    String
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  tokenHash String   @unique
  expiresAt DateTime
  createdAt DateTime @default(now())

  @@index([userId])
}

model RefreshSession {
  id            String   @id @default(uuid())
  userId        String
  user          User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  tokenHash     String   @unique
  authVersion   Int
  expiresAt     DateTime
  revokedAt     DateTime?
  replacedById  String?
  userAgent     String?
  ipAddress     String?
  lastUsedAt    DateTime?
  createdAt     DateTime @default(now())

  @@index([userId])
  @@index([expiresAt])
}

model AuthEvent {
  id        String        @id @default(uuid())
  userId    String?
  user      User?         @relation(fields: [userId], references: [id], onDelete: SetNull)
  eventType AuthEventType
  ipAddress String?
  userAgent String?
  metadata  Json?
  createdAt DateTime      @default(now())

  @@index([userId])
  @@index([eventType, createdAt])
}

model Document {
  id           String             @id @default(uuid())
  title        String
  description  String?            @db.Text
  createdById  String
  createdBy    User               @relation("DocumentCreatedBy", fields: [createdById], references: [id], onDelete: Restrict)
  departmentId String?
  department   Department?        @relation(fields: [departmentId], references: [id], onDelete: SetNull)
  visibility   DocumentVisibility @default(ALL)
  isArchived   Boolean            @default(false)
  createdAt    DateTime           @default(now())
  updatedAt    DateTime           @updatedAt
  versions     DocumentVersion[]
  tags         DocumentTag[]
  favoritedBy  DocumentUserFavorite[]
  viewedBy     DocumentUserRecent[]
  auditLogs      DocumentAuditLog[]
  notifications  Notification[]

  @@index([createdById])
  @@index([departmentId])
  @@index([departmentId, visibility, isArchived])
  @@index([createdAt])
}

model DocumentUserFavorite {
  userId     String
  user       User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  documentId String
  document   Document @relation(fields: [documentId], references: [id], onDelete: Cascade)
  createdAt  DateTime @default(now())

  @@id([userId, documentId])
  @@index([documentId])
}

model DocumentUserRecent {
  userId       String
  user         User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  documentId   String
  document     Document @relation(fields: [documentId], references: [id], onDelete: Cascade)
  lastViewedAt DateTime @default(now())

  @@id([userId, documentId])
  @@index([userId, lastViewedAt])
}

model DocumentAuditLog {
  id         String              @id @default(uuid())
  documentId String?
  document   Document?           @relation(fields: [documentId], references: [id], onDelete: SetNull)
  userId     String?
  user       User?               @relation(fields: [userId], references: [id], onDelete: SetNull)
  action     DocumentAuditAction
  metadata   Json?
  createdAt  DateTime            @default(now())

  @@index([documentId, createdAt])
  @@index([userId, createdAt])
}

model DocumentTag {
  id        String   @id @default(uuid())
  name      String   @unique
  createdAt DateTime @default(now())
  documents Document[]
}

model DocumentVersion {
  id               String                   @id @default(uuid())
  documentId       String
  document         Document                 @relation(fields: [documentId], references: [id], onDelete: Cascade)
  versionNumber    Int
  fileName         String
  mimeType         String
  storageKey       String                   @unique
  sizeBytes        Int
  sha256           String
  processingStatus   DocumentProcessingStatus @default(PENDING)
  processingProgress Int                      @default(0)
  processingError    String?
  createdById      String
  createdBy        User                     @relation("DocumentVersionCreatedBy", fields: [createdById], references: [id], onDelete: Restrict)
  createdAt        DateTime                 @default(now())
  chunks           DocumentChunk[]

  @@unique([documentId, versionNumber])
  @@index([documentId])
}

model DocumentChunk {
  id                String          @id @default(uuid())
  documentVersionId String
  documentVersion   DocumentVersion @relation(fields: [documentVersionId], references: [id], onDelete: Cascade)
  chunkIndex        Int
  content           String          @db.Text
  sectionTitle      String?
  embedding         Unsupported("vector(768)")
  searchVector      Unsupported("tsvector")?

  @@unique([documentVersionId, chunkIndex])
  @@index([documentVersionId])
}

model Conversation {
  id        String   @id @default(uuid())
  userId    String
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  title     String   @default("New conversation")
  /// Topic inferred by queryOptimizer for the most recent question. Used by
  /// the feedback memory module to weight past mistakes by topic.
  topic     String?
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  messages  ConversationMessage[]

  @@index([userId, updatedAt])
}

model ConversationMessage {
  id             String            @id @default(uuid())
  conversationId String
  conversation   Conversation      @relation(fields: [conversationId], references: [id], onDelete: Cascade)
  role           String
  content        String            @db.Text
  sources        Json?
  confidence     String?
  createdAt      DateTime          @default(now())
  feedback       AnswerFeedback?

  @@index([conversationId, createdAt])
}

model AnswerFeedback {
  id        String             @id @default(uuid())
  messageId String             @unique
  message   ConversationMessage @relation(fields: [messageId], references: [id], onDelete: Cascade)
  userId    String
  user      User               @relation(fields: [userId], references: [id], onDelete: Cascade)
  rating    String             // "up" | "down"
  comment   String?            @db.Text
  createdAt DateTime           @default(now())

  @@index([userId, createdAt])
}
